--- a/food.html
+++ b/food.html
@@ -6,7 +6,7 @@
 
 
     <div id="header">
-      <h1 id='title'><a id="home" href="home.html"><img id ='home_img1' src='https://i.pinimg.com/originals/48/bc/d6/48bcd68d718226b7febeb4407548953d.png'> </img>  속초로 가자! ㄱㄱ <img id ='home_img2' src='https://i.pinimg.com/originals/48/bc/d6/48bcd68d718226b7febeb4407548953d.png'> </img> </a></h1>
+      <h1 id='title'><a id="home" href="index.html"><img id ='home_img1' src='https://i.pinimg.com/originals/48/bc/d6/48bcd68d718226b7febeb4407548953d.png'> </img>  속초로 가자! ㄱㄱ <img id ='home_img2' src='https://i.pinimg.com/originals/48/bc/d6/48bcd68d718226b7febeb4407548953d.png'> </img> </a></h1>
       
       
 
