--- a/reason.html
+++ b/reason.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
 
-    <p class="info">속초는 강원도 동북족에 위치하는 시<br>제주도의 할라산이랑 남쪽에 있는 지리산 다음으로 대한민국에서 3 번제로 가장 높은 서락산<br>바다랑 가까워서 해변도있고<br>맛있는 해산물도 많고</p>
+    <p class="info">속초는 강원도 동북족에 위치하는 시<br>제주도의 한라산이랑 남쪽에 있는 지리산 다음으로 대한민국에서 3 번제로 가장 높은 서락산<br>바다랑 가까워서 해변도있고<br>맛있는 해산물도 많고</p>
 
     <img class="pictures" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/%EC%A0%9C14%EB%8C%80%EC%B4%9D%EC%84%A0%EA%B0%95%EC%9B%90%EC%86%8D%EC%B4%88.png/691px-%EC%A0%9C14%EB%8C%80%EC%B4%9D%EC%84%A0%EA%B0%95%EC%9B%90%EC%86%8D%EC%B4%88.png"></img>
 
