--- a/food.html
+++ b/food.html
@@ -23,6 +23,49 @@
       </ul>
     </div>
 
+    <p class="info">새상의 행복중에 하나: 음식</p>
+
+    <p class="info">속초 맛집중에 맛집들. 아바이 마을에 있는 아바이 순대, 오징어, 오징어 빵, 닭강정</p>
+
+    <p class="intro">단천식당</p>
+    <img class="food_img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKJib4M6mZaObJ17Xh6ttG40F_bnQlXcnt5w&usqp=CAU"></img>
+
+    
+
+    <p class="intro">속초 관광 수산 시장, 만석 닭강정</p>
+    <img class="food_img" src="https://pds.joins.com/news/component/htmlphoto_mmdata/201905/17/ea0bcb9d-6a44-415b-a1f9-c6ab23c0990c.jpg"</img>
+
+    <p class="intro">라또래요 젤라또 (감자 젤라또)</p>
+    <img class="food_img" src="https://mblogthumb-phinf.pstatic.net/MjAyMDA2MTJfOTgg/MDAxNTkxODg3ODE5MTg1.6eAQpM2Q62j178XWmw3hpSu0EvQfSKux-7dSX6cKmeUg.6LNtKpOB1RQs_IZ-NIq9Z-k_8Px3AtyaH5xx-DA_WZIg.JPEG.kwonek1990/IMG_2972.JPG?type=w800"</img>
+
+    
+    <p class="intro">시장에 있는 아바이 오징어 빵</p>
+    <img class="food_img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPkQq1Be5HIGJ6GDoQX-O_aEDRyiElE8aYug&usqp=CAU"</img>
+
+    <br><br>
+ 
+    <div class="row">
+      <div class="column">
+        <img class="food_img2" src="http://m.sokchomall.co.kr/web/product/big/20200512/6366d313b0ee2da2f65843d4a4ab9656.jpg"></img>
+      </div>
+      <div class="column">
+        <img class="food_img2" src="https://blog.kakaocdn.net/dn/r3vsB/btqFnFcOqN0/3ZGgpm3Lqq7ue8LZfG2KV1/img.jpg"></img>
+      </div>
+      <div class="column">
+        <img class="food_img2" src="https://media-cdn.tripadvisor.com/media/photo-s/16/69/47/fe/caption.jpg"></img>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <img class="food_img2" src="https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F99753B355E9EE2161C"></img>
+      </div>
+      <div class="column">
+        <img class="food_img2" src="https://mblogthumb-phinf.pstatic.net/MjAyMTAyMjVfMTg1/MDAxNjE0MjI3Nzk3NDU0.vwc6mHmgETXJE6o7bVvj52FpGiHjyJFFlWU4dzm27F0g.Wr3VdtcIgl8XBCMLysbkrNurX673-8QIuXiHs52E2Kgg.JPEG.armed49/IMG_9394.JPG?type=w2"></img>
+      </div>
+      <div class="column">
+        <img class="food_img2" src="https://instagram.fhrk5-1.fna.fbcdn.net/v/t51.2885-15/sh0.08/e35/s640x640/166340226_294267358911683_2909876409560141136_n.jpg?tp=1&_nc_ht=instagram.fhrk5-1.fna.fbcdn.net&_nc_cat=111&_nc_ohc=kr-G-oih81wAX8mUBD9&edm=AA0rjkIAAAAA&ccb=7-4&oh=24f3cf5235882230b331329b8275d3bf&oe=60915720&_nc_sid=d997c6"></img>
+      </div>
+    </div>
     <script>
       document.getElementById("food").style.backgroundColor = "#72abff";
     </script>
