--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 
     <img id = "KoreanAir" src = "https://img.i-scmp.com/cdn-cgi/image/fit=contain,width=1098,format=auto/sites/default/files/styles/1200x800/public/images/methode/2019/02/28/23735d82-3b3b-11e9-a334-8d034d5595df_image_hires_173330.jpg?itok=r7qUJnZi&v=1551346418"></img>
     
-    <p id = "flight_img-txt_top1">요즘, 코로나 19 때문에 우리가 너무 갇혀있는것 같아서<br>제가 소망하는 한국여행을 소개해 드리겠습니다. <br>여행을 모험해 보면서 같이 즐겨보고 한국의 아름다움을 살펴봅시다.</p>
+    <p id = "flight_img-txt_top1">요즘, 코로나 19 때문에 우리가 너무 갇혀있는것 같아서<br>제가 소망하는 한국여행을 소개해 드리겠습니다. <br>여행을 모험하며 같이 한국의 아름다움을 살펴봅시다.</p>
 
     <p id = "flight_img-txt_top2">미국 메릴랜드에서 강원도
-    속초 시 까지<br>한번 맘 먹고 가보고 십습니다 <br> 속초 ㄱㄱ! </p>
+    속초시 까지<br>한번 맘 먹고 가보고 싶습니다</p>
 
-    <p id = "flight_img-txt_bottom">제가 좋아하는 음식 이랑 놀걸이 기대하며 저의 애창곡들을 들으며 <br> 속초 ㄱㄱ! </p>
+    <p id = "flight_img-txt_bottom">제가 좋아하는 음식이랑 놀걸이를 기대하며 저의 애창곡들을 들으며 <br> 속초 ㄱㄱ! </p>
     
-    <iframe id = "flight_img-play" width="560" height="315" src="https://www.youtube.com/embed/videoseries?controls=0&amp;list=PLzrNVI-euOywi35NvJwM3IIaNrQGiO7sl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id = "flight_img-play" width="560" height="315" src="https://www.youtube.com/embed/8rB3PLsSz2o?start=72" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></iframe>
 
     <script>
       document.getElementById("home_img1").src = "https://www.clker.com/cliparts/1/Z/d/2/B/b/pinkhouse-hi.png";
